--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,6 @@
 fastapi== 0.115.5
-uvicorn==0.17.6
+uvicorn==0.32.1
 pydantic==2.10.2
-motor==2.5.1
-anyio==3.5.0
-httpx==0.22.0
+motor==3.6.0
+anyio== 4.6.2.post1
+httpx== 0.28.0
